--- a/website/style.css
+++ b/website/style.css
@@ -1,16 +1,17 @@
 body {
+	background-image: url("assets/seamless.png");
     font-family: "Ubuntu";
     font-size: 20px;
 }
 
 #header {
-	background-color: Blue;
+	background-color: lightgray;
+	height: 3rem;
+	left: 0;
 	padding: 0;
 	position: absolute;
 	top: 0;
-	left: 0;
 	width: 100%;
-	height: 3rem;
 }
 
 #header h1 {
@@ -33,14 +34,14 @@ body {
 
 #notification_hook {
 	background: #eeeee4;
-	height: 1.4rem;
-	border: solid;
 	border-radius : 5px;
-	width: 40rem;
+	border: solid;
+	height: 1.4rem;
 	margin: auto;
 	padding: 0.5rem;
 	position: relative;
 	top: -2rem;
+	width: 40rem;
 }
 
 #close_notification_icon {
@@ -108,4 +109,10 @@ label {
 
 .hidden {	
 	display: none !important;
+}
+
+.testcube {
+	background: red;
+	height: 500px;
+	width: 500px;
 }
