--- a/website/style.css
+++ b/website/style.css
@@ -4,58 +4,7 @@ body {
     font-size: 20px;
 }
 
-#header {
-	background-color: lightgray;
-	height: 3rem;
-	left: 0;
-	padding: 0;
-	position: absolute;
-	top: 0;
-	width: 100%;
-}
-
-#content {
-	position: relative;
-	top: 5rem;
-}
-
-#menu_icon {
-	position: relative;
-	left: 1rem;
-	top: 0.7rem;
-}
-
-#notification_hook {
-	background: #eeeee4;
-	border-radius : 5px;
-	border: solid;
-	height: 1.4rem;
-	margin: auto;
-	padding: 0.5rem;
-	position: relative;
-	top: -2rem;
-	width: 40rem;
-}
-
-#close_notification_icon {
-	position: absolute;
-	right: 1rem;
-	top: 0.8rem;
-}
-
-#menu {
-	border: 1px solid #222;
-	position: absolute;
-	background: white;
-	border-radius: 5px;
-	box-shadow: 2px 2px 5px #888;
-	/* width: 6rem; */
-	z-index: 10;
-	/* padding: 0 1rem; */
-	top: 3rem;
-}
-
-.Nav_Menu {
+.headerbox {
     font-size: 20px;
     border: 2px solid black;
     display: inline-block;
@@ -68,44 +17,30 @@ body {
     
 }
 
-.Nav_Menu:hover {
+.headerbox:hover {
     background: lightblue;
     cursor: pointer;
-}
-
-#menu ul {
-	list-style: none;
-	padding: 0;
-	cursor: pointer;
-}
-
-#menu li {
-	padding: 0.2rem 2rem;
-}
-
-#menu li:hover {
-	background: #aaa;
-}
-
-#user_list div {
-	background: #ddd;
-	padding: 0.2rem 1rem;
-}
-
-label {
-	padding-right: 1rem;
-}
-
-.fa-triangle-exclamation {
-	color: #c11a1a;
-}
-
-.hidden {	
-	display: none !important;
 }
 
 .testcube {
 	background: red;
 	height: 500px;
 	width: 500px;
+}
+
+#content {
+	left: 10rem;
+	position: relative;
+	top: 10rem;
+}
+
+#header {
+	background-color: lightgray;
+	border: 1px solid black;
+	height: 4rem;
+	left: 0px;
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	z-index: 100;
 }
