--- a/website/style.css
+++ b/website/style.css
@@ -5,16 +5,13 @@ body {
 }
 
 .headerbox {
-    font-size: 20px;
-    border: 2px solid black;
-    display: inline-block;
-    position: relative;
-    left: 2rem;
-    top: 0.55rem;
-    width: 15%;
-    height: 1.9rem;
-    text-align: center;
-    
+    align-items: center;
+    border: 2px solid gray;
+    display: flex;
+    font-size: 30px;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
 }
 
 .headerbox:hover {
@@ -36,7 +33,9 @@ body {
 
 #header {
 	background-color: lightgray;
-	border: 1px solid black;
+	border-bottom: 2px solid gray;
+	border-top: 2px solid gray;
+	display: flex;
 	height: 4rem;
 	left: 0px;
 	position: fixed;
