--- a/website/style.css
+++ b/website/style.css
@@ -4,6 +4,10 @@ body {
     font-size: 20px;
 }
 
+.bigbreak {
+	height: 1rem;
+}
+
 .headerbox {
     align-items: center;
     border: 2px solid gray;
@@ -20,8 +24,8 @@ body {
 }
 
 .headermini {
-	border: 2px solid gray;
 	background-color: white;
+	border: 2px solid gray;
 	font-size: 30px;
 	padding: 10px;
 }
@@ -32,7 +36,15 @@ body {
 	width: 500px;
 }
 
+#boxfull {
+	background-color: white;
+	border: 2px solid gray;
+	height: calc(100vh - 10rem);
+}
+
 #content {
+	display: flex;
+	flex-flow: column;
 	padding-left: 2rem;
 	padding-top: 2rem;
 	position: relative;
