--- a/website/style.css
+++ b/website/style.css
@@ -1,7 +1,7 @@
 body {
 	background-image: url("assets/seamless.png");
-    font-family: "Ubuntu";
-    font-size: 20px;
+	font-family: "Ubuntu";
+	font-size: 20px;
 }
 
 .bigbreak {
@@ -9,19 +9,16 @@ body {
 }
 
 .headerbox {
-    align-items: center;
-    background-color: white;
-    border: 2px solid gray;
-    display: flex;
-    font-size: 30px;
-    height: 100%;
-    justify-content: center;
-    width: 100%;
+	text-align: center;
+	background-color: white;
+	border: 2px solid gray;
+	font-size: 30px;
+	width: 100%;
 }
 
 .headerbox:hover {
-    background-color: lightblue;
-    cursor: pointer;
+	background-color: lightblue;
+	cursor: pointer;
 }
 
 .headermini {
@@ -41,7 +38,7 @@ body {
 	float: right;
 	font-size: 20px;
 	height: 2rem;
-	padding: 5px;
+	padding: 5px 10px 5px 10px;
 	width: 50%;
 }
 
@@ -77,4 +74,30 @@ body {
 	top: 0px;
 	width: 100%;
 	z-index: 10;
+}
+
+.buttonbox {
+	align-items: center;
+	bottom: 1rem;
+	display: flex;
+	justify-content: center;
+	position: absolute;
+	width: 100%;
+}
+
+.button {
+
+}
+
+.buttonsubmit {
+	background-color: green;
+	border: none;
+	color: white;
+	font-size: 25px;
+	text-align: center;
+}
+
+.colorblue {
+	background-color: dodgerblue;
+	color: white;
 }
