--- a/website/style.css
+++ b/website/style.css
@@ -11,7 +11,7 @@ body {
 .headerbox {
 	text-align: center;
 	background-color: white;
-	border: 2px solid gray;
+	border: 1px solid gray;
 	font-size: 30px;
 	width: 100%;
 }
@@ -51,6 +51,10 @@ body {
 	width: 500px;
 }
 
+.textdiv {
+	margin: 1rem;
+}
+
 #boxfull {
 	background-color: white;
 	border: 2px solid gray;
@@ -69,8 +73,8 @@ body {
 
 #header {
 	background-color: lightgray;
-	border-bottom: 2px solid gray;
-	border-top: 2px solid gray;
+	border-bottom: 1px solid gray;
+	border-top: 1px solid gray;
 	display: flex;
 	height: 4rem;
 	left: 0px;
@@ -82,7 +86,7 @@ body {
 
 .buttonbox {
 	align-items: center;
-	bottom: 2rem;
+	bottom: 1rem;
 	display: flex;
 	gap: 2rem;
 	justify-content: center;
@@ -117,6 +121,13 @@ body {
 	font-size: 25px;
 	text-align: center;
 	width: 25%;
+}
+
+.buttonnext {
+	bottom: 0px;
+	position: absolute;
+	right: 0px;
+	width: 15%;
 }
 
 .colorblue {
