--- a/website/style.css
+++ b/website/style.css
@@ -8,6 +8,10 @@ body {
 	height: 1rem;
 }
 
+.date {
+	font-style: italic
+}
+
 .headerbox {
 	text-align: center;
 	background-color: white;
@@ -100,7 +104,7 @@ body {
 	padding: 10px;
 }
 
-.buttonbox {
+.buttonbottom {
 	align-items: center;
 	bottom: 1rem;
 	display: flex;
@@ -124,7 +128,11 @@ body {
 	cursor: pointer;
 }
 
-.buttonother{
+.buttonbox {
+	
+}
+
+.buttonother {
 	font-size: 25px;
 	text-align: center;
 	width: 25%;
@@ -139,10 +147,7 @@ body {
 	width: 25%;
 }
 
-.buttonlogout {
-	background-color: red;
-	border: 2px solid red;
-	color: white;
+.buttonright {
 	font-size: 25px;
 	padding: 5px;
 	position: absolute;
@@ -150,6 +155,12 @@ body {
 	text-align: center;
 	top: 2.5rem;
 	width: 15%;
+}
+
+.buttonlogout {
+	background-color: red;
+	border: 2px solid red;
+	color: white;
 }
 
 .buttonnext {
