--- a/website/style.css
+++ b/website/style.css
@@ -64,6 +64,12 @@ body {
 	margin: 5px;
 }
 
+.textright {
+	align-items: right;
+	margin-left: auto;
+}
+
+
 .userpicture {
 	height: 30px;
 	width: 30px;
@@ -198,13 +204,20 @@ body {
 	border: 2px solid gray;
 	display: flex;
 	flex-flow: row;
-	height: 50%;
+	max-height: 50%;
 	width: 100%;
 }
 
 .postmain {
+	display: flex;
+	flex-flow: column;
 	flex-grow: 1;
 	padding: 0.5rem;
+}
+
+.block {
+	overflow: auto;
+	height: calc(300px - 6rem);
 }
 
 .postpicture {
@@ -213,8 +226,4 @@ body {
 	margin-left: auto;
 	object-fit: fill;
 	width: 300px;
-}
-
-.picture {
-	
 }
