the image is not allowed to resize ever, bad image

--- a/website/style.css
+++ b/website/style.css
@@ -231,6 +231,8 @@ textarea.inputfield {
 	align-items: right;
 	height: 300px;
 	margin-left: auto;
+	max-height: 300px;
+	max-width: 300px;
 	min-height: 300px;
 	min-width: 300px;
 	object-fit: fill;
